# Roguelike-AoC-2020

./: README.md
Lesson 1/: main.c
Lesson 10/: CMakeLists.txt
Lesson 10/include/: rogue.h
Lesson 10/src/: main.c  player.c  room.c
Lesson 11/: CMakeLists.txt
Lesson 11/include/: rogue.h
Lesson 11/src/: level.c  main.c  player.c
Lesson 12/: CMakeLists.txt
Lesson 12/include/: rogue.h
Lesson 12/src/: level.c  main.c  room.c
Lesson 13/include/: rogue.h
Lesson 13/src/: main.c  monster.c
Lesson 14/include/: rogue.h
Lesson 14/src/: level.c  monster.c  player.c  room.c
Lesson 15/: CMakeLists.txt
Lesson 15/include/: rogue.h
Lesson 15/src/: main.c  monster.c  player.c  room.c
Lesson 16/: CMakeLists.txt
Lesson 16/include/: rogue.h
Lesson 16/src/: player.c  room.c
Lesson 17/src/: level.c  player.c
Lesson 18/include/: rogue.h
Lesson 19/src/: combat.c  main.c  room.c
Lesson 2/: main.c
Lesson 20/include/: rogue.h
Lesson 20/src/: room.c  screen.c
Lesson 21/src/: room.c
Lesson 22/: CMakeLists.txt
Lesson 25/: CMakeLists.txt
Lesson 27 - additional/: CMakeLists.txt
Lesson 27 - additional/include/: combat.h  item.h  level.h  monster.h  player.h  room.h  screen.h  utils.h
Lesson 27 - additional/src/: main.c  screen.c
Lesson 27 - additional/src/entities/: level.c  monster.c  player.c  room.c
Lesson 27 - additional/src/entities/items/: itemFactory.c
Lesson 27 - additional/src/utils/: pathFinding.c
Lesson 3/: main.c
Lesson 4/: main.c
Lesson 5/: main.c
Lesson 6/: main.c
Lesson 7/: main.c
Lesson 8/: main.c
(+35 files in other folders)
